start java gw;